[package]
name = "fbterm"
version = "0.1.0"
description = "A terminal emulator for any framebuffer."
keywords = ["terminal", "framebuffer", "os"]
license = "MIT"
authors = ["韩朴宇 <w12101111@gmail.com>"]
repository = "https://github.com/12101111/fbterm"
homepage = "https://github.com/12101111/fbterm"
edition = "2018"
