[package]
name = 'fbterm'
version = '0.3.0'
description = 'A terminal emulator for any framebuffer.'
keywords = [
    'terminal',
    'framebuffer',
    'os',
    'no_std'
]
license = 'MIT'
authors = ['韩朴宇 <w12101111@gmail.com>']
repository = 'https://github.com/12101111/fbterm'
homepage = 'https://github.com/12101111/fbterm'
edition = '2018'

[workspace]
members = [
    '.',
    'fbterm-sdl',
]

[features]
alloc = ['lru', 'fontdue']

[dependencies.fontdue]
version = '0.3'
optional = true

[dependencies.lru]
version = '0.6'
optional = true
